--- a/estilosinicio.css
+++ b/estilosinicio.css
@@ -1,12 +1,14 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #5e5d5d; /* Fondo gris suave */
+    color: #333;
     margin: 0;
     padding: 0;
-} 
+}
 
 h1 {
     text-align: center;
+    color: #007bff; /* Azul para encabezados */
 }
 
 .contenedor-botones {
@@ -16,33 +18,42 @@ h1 {
 }
 
 button {
-    padding: 10px 30px; /* Ajuste del padding para hacer los botones más anchos */
+    padding: 12px 24px;
     margin: 10px;
-    background-color: #007bff;
+    background-color: #007bff; /* Azul para botones */
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    white-space: nowrap; /* Evita que el texto se divida en múltiples líneas */
+    font-size: 16px;
+    transition: background-color 0.3s;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #0056b3; /* Azul oscuro al pasar el ratón */
 }
 
 table {
     width: 100%;
     margin: 0 auto;
     border-collapse: collapse;
-    background-color: #fff;
-}
-
-table, th, td {
-    border: 1px solid #ccc;
+    background-color: #333; /* Negro menos oscuro para tabla */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 th, td {
-    padding: 10px;
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #666; /* Plomo para bordes de tabla */
+    color: #fff; /* Texto blanco para celdas de tabla */
+}
+
+th {
+    background-color: #222; /* Negro un poco más oscuro para encabezados de tabla */
+}
+
+tr:hover {
+    background-color: #444; /* Negro más claro al pasar el ratón */
 }
 
 .modal {
@@ -54,17 +65,18 @@ th, td {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.6); /* Fondo oscuro semitransparente */
 }
 
 .modal-contenido {
-    background-color: #fefefe;
+    background-color: #fff;
+    color: #333;
     margin: 10% auto;
     padding: 20px;
-    border: 1px solid #888;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 400px;
     width: 80%;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
 .cerrar {
@@ -72,11 +84,12 @@ th, td {
     float: right;
     font-size: 28px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .cerrar:hover,
 .cerrar:focus {
-    color: black;
+    color: #333;
     text-decoration: none;
     cursor: pointer;
 }
@@ -84,6 +97,7 @@ th, td {
 .modal-contenido h2 {
     text-align: center;
     margin-bottom: 20px;
+    color: #007bff; /* Azul para títulos de modal */
 }
 
 form {
@@ -95,18 +109,21 @@ label {
     margin-bottom: 10px;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
     width: calc(100% - 22px);
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background-color: #f9f9f9;
+    color: #333;
 }
 
 input[type="submit"] {
     width: 100%;
-    padding: 10px;
-    background-color: #007bff;
+    padding: 12px;
+    background-color: #007bff; /* Azul para botones */
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -114,5 +131,5 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #0056b3; /* Azul oscuro al pasar el ratón */
 }
